--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   </head>
   <body>
     <!-- Шапка сайта -->
+    
     <header class="header">
       <div class="container main-nav">
       <nav class="logo-nav">
@@ -37,53 +38,53 @@
           <a class="link-phone" href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
         </li>
       </ul>
-    </div>
+    </div> 
     <!--  Mobil menu-->
     <div class="mobil-menu" data-menu>
       <div class="container mobil-menu_container">
       <button class="mobil-menu_close-btn" data-menu-close>
-        <svg class="mobil-menu_close-icon" width="24" height="24">
+        <svg class="mobil-menu_close-icon"  width="8" height="8">
           <use href="./images/symbol.svg#icon-clos-modal"></use>
         </svg>
       </button>
-      <ul class="site-nav list">
+      <ul class="site-nav-menu list">
         <li class="item"><a class="link current" href="index.html">Studio</a></li>
         <li class="item"><a class="link" href="./portfolio.html">Portfolio</a></li>
         <li class="item"><a class="link" href="/">Contacts</a></li>
       </ul>
-      <ul class="auth-nav list">
-        <li class="item">
-          <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
+      <ul class="auth-nav-menu list">
         <li class="item">
           <a class="link-phone" href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
         </li>
+        <li class="item-menu">
+          <a class="link-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
       </ul>
-      <ul class="social-list list">
+      <ul class="social-list-menu list">
         <li class="social-list-item">
          <a href="" class="social-list-link">
-          <svg class="social-list-icon" width="16" height="16">
+          <svg class="social-list-icon" width="24" height="24">
            <use href="./images/symbol.svg#icon-instagram"></use>
           </svg>
          </a>
         </li>
         <li class="social-list-item">
           <a href="" class="social-list-link">
-           <svg class="social-list-icon" width="16" height="16">
+           <svg class="social-list-icon" width="24" height="24">
             <use href="./images/symbol.svg#icon-twitter"></use>
            </svg>
           </a>
          </li>
          <li class="social-list-item">
           <a href="" class="social-list-link">
-           <svg class="social-list-icon" width="16" height="16">
+           <svg class="social-list-icon" width="24" height="24">
             <use href="./images/symbol.svg#icon-facebook"></use>
            </svg>
           </a>
          </li>
          <li class="social-list-item">
           <a href="" class="social-list-link">
-           <svg class="social-list-icon" width="16" height="16">
+           <svg class="social-list-icon" width="24" height="24">
             <use href="./images/symbol.svg#icon-linkedin"></use>
            </svg>
           </a>
@@ -94,18 +95,19 @@
     </header>
     <main>
 <!-- Герой -->
-<!--      <section class="hero">
+     <section class="hero">
         <div class="container-hero">
         <h1 class="hero-title">
-          Effective Solutions for <br />
-          Your Business
+          Effective Solutions  <br />
+          for Your Business
         </h1>
         <button class="button primary" data-modal-open>Order Service</button>
       </div>
       </section>
--->
-<!-- Преимущества --> 
-<!--      <section class="section">
+
+<!-- Преимущества -->
+
+<!-- <section class="section">
       <div class="container"> 
       -->         
 <!-- <h2>Advantage</h2>-->
@@ -498,7 +500,7 @@
     </footer>
   -->
   <!--- Модальное окно  --->   
- <!--
+ 
   <div class="backdrop is-hidden" data-modal>
      <div class="modal">
       <button type="button" class="modal-close-btn" data-modal-close>
@@ -566,9 +568,9 @@
         <button type="submit" class="modal-form-submit">Send</button> 
       </form>
      </div>
-    </div> -->
+    </div>
     <script src="./js/mobil-menu.js"></script>
-   <!-- <script src="./js/modal.js"></script>-->
+    <script src="./js/modal.js"></script>
   
   </body>
 </html>
