--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css"/> 
   </head>
   <body>
-    
+
     <!-- Шапка сайта -->
     
     <header class="header">
@@ -215,6 +215,7 @@
         <ul class="team-list list">
           <li class="item-team">
             <img class="team-img"
+              srcset="./images/photo-4-min.jpg 1x, ./images/photo-4@2x.jpg 2x"
               src="./images/photo-4-min.jpg"
               alt="Photo 4"
               width="264"
@@ -257,6 +258,7 @@
           </li>
           <li class="item-team">
             <img class="team-img"
+              srcset="./images/photo-5-min.jpg 1x, ./images/photo-5@2x.jpg 2x"
               src="./images/photo-5-min.jpg"
               alt="Photo 5"
               width="264"
@@ -299,6 +301,7 @@
           </li>
           <li class="item-team">
             <img class="team-img"
+              srcset="./images/photo-6-min.jpg 1x, ./images/photo-6@2x.jpg 2x"
               src="./images/photo-6-min.jpg"
               alt="Photo 6"
               width="264"
@@ -341,6 +344,7 @@
           </li>
           <li class="item-team">
             <img class="team-img"
+              srcset="./images/photo-7-min.jpg 1x, ./images/ptoto-7@2x.jpg 2x"
               src="./images/photo-7-min.jpg"
               alt="Photo 7"
               width="264"
